# PromptManager

./: Cargo.toml  README.md  build.rs
docs/: adv prompt enh functionalities.md  architecture.mmd  requirements.md  test_plan.md  ui and design guidelines.md
src/: app.rs  main.rs
src/components/: history_panel.slint  main_window.rs  main_window.slint  mod.rs  prompt_editor.rs  prompt_editor.slint  prompt_list.rs  settings.rs
src/database/: mod.rs
src/models/: history.rs  mod.rs
