[package]
name = "PromptManager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
slint-build = "1.11.0"

[dependencies]
slint = { version = "1.11.0" }
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
notify = "4.0"
ctrlc = "3.2"
clap = "4.4"
